--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
                 <div id="board">
                     
                 </div>
-
-                <div class="game-over hide">
-                    <h1> --- Game Over ! --- </h1>
+            </div>
+            <div class="game-over hide" id = "game-over-screen" >
+                <div class="game-over-content">
+                    <h1 id="game-over-text"> Game Over! </h1>
+                    <button id="game-over-button">Try Again</button>
                 </div>
+            </div>
 
-                <div class = "win hide">
-                    <h1> --- You won ! --- </h1>
+            <div class = "win hide" id = "win-screen" >
+                <div class="win-content">
+                    <h1 id="win-text">You Won!</h1>
+                    <button id="play-again-button">Play Again</button>
                 </div>
-
             </div>
     </main>
     
